Fixed header z-index

--- a/resources/css/cf3/structure.css
+++ b/resources/css/cf3/structure.css
@@ -19,6 +19,7 @@ footer a {
         top: 0;
         left: 0;
         width: 100%;
+        z-index: 1;
     }
     #sidebar {
         position: fixed;
